[package]
name = "renderforge-core"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = { version = "0.30.5" }
gl = { version = "0.14.0" }
glutin = { version = "0.32" }
delegate = { version = "0.13.4" }
winit = { version = "0.30.12" }
thiserror = { version = "2.0.16" }
anyhow = { version = "1.0.100" }
hecs = { version = "0.10.5" }
